adding charle's work (eid login and registration) + make jwt stateless + redirection with access token to tierce app